@@ -62,6 +62,11 @@ SVN trunk (1.1-svn):
    * decreased strong trait hitpoints bonus from 2 to 1
    * added a fisher's clock to MP games to limit turn duration
  * graphics:
+   * HP and XP bar modifications
+	*movement ball seperated from bars
+	*moved to left so xp bar under the ball
+	*xpbar now changes color differently for AMLA then for regular leveling
+	*bar colors and text color in report now forced to match.
    * team color:
      * units can now have colors redefined to match team colors:
      * team color can be defined in the side tag with "team_rgb=r,g,b"
